[project]
name = "ColdGuard"
version = "0.1.0"
description = "The backend for coldGuard allows the client(application) to connect to the mcp tools, fetch devices and their states etc"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beanie==2.0.1",
    "motor==3.7.1",
    "fastapi[standard]>=0.128.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "pydantic[email]>=2.12.5",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.3.0",
    "paho-mqtt>=2.1.0",
    "fastmcp>=3.2.4",
    "apscheduler>=3.11.2",
    "openai>=2.41.0",
    "slowapi>=0.1.10",
]
